// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTokensCss > generates correct CSS for a standard surface group 1`] = `
"
:root {
  /* Elevation */
  --shadow-sm: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.1 + (-0.05 * var(--tau, 1))));
  --shadow-md: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  --shadow-lg: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  --shadow-xl: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  /* Focus */
  --focus-ring-color: oklch(calc(0.6 + (-0.15 * var(--tau, 1))) 0.2 250 / 1);
  /* Highlight */
  --highlight-ring-color: oklch(calc(0.6 + (-0.15 * var(--tau, 1))) 0.2 300 / 1);
  --highlight-surface-color: oklch(calc(0.575 + (0.375 * var(--tau, 1))) 0.05 300 / 1);
}

.surface-page, body {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-light-l: 0.98;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_local-dark-l: 0.1;
  --_mode-mix: calc((1 - var(--tau)) / 2);
  --alpha-hue: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-beta: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-structure: 1px solid CanvasText;
  --surface-token: oklch(
    calc(0.98 + (0.1 - 0.98) * var(--_mode-mix))
    var(--alpha-beta)
    var(--alpha-hue)
  );
  --text-high-token: oklch(
    calc(0 + (1 - 0) * var(--_mode-mix))
    0
    0
  );
  --text-body-token: oklch(
    calc(0.3152 + (0.9416 - 0.3152) * var(--_mode-mix))
    0
    0
  );
  --text-subtle-token: oklch(
    calc(0.4184 + (0.893 - 0.4184) * var(--_mode-mix))
    0
    0
  );
  --text-subtlest-token: oklch(
    calc(0.5085 + (0.8406 - 0.5085) * var(--_mode-mix))
    0
    0
  );
  --text-high-hc-token: oklch(
    calc(0 + (1 - 0) * var(--_mode-mix))
    0
    0
  );
  --text-body-hc-token: oklch(
    calc(0 + (0.9866 - 0) * var(--_mode-mix))
    0
    0
  );
  --text-subtle-hc-token: oklch(
    calc(0.3152 + (0.9416 - 0.3152) * var(--_mode-mix))
    0
    0
  );
  --text-subtlest-hc-token: oklch(
    calc(0.3696 + (0.9174 - 0.3696) * var(--_mode-mix))
    0
    0
  );
  --border-dec-token: oklch(
    calc(0 + (0.9866 - 0) * var(--_mode-mix))
    0
    0
    /
    calc(0.0515 + (0.2911 - 0.0515) * var(--_mode-mix))
  );
  --border-int-token: oklch(
    calc(0 + (0.9866 - 0) * var(--_mode-mix))
    0
    0
    /
    calc(0.0515 + (0.2911 - 0.0515) * var(--_mode-mix))
  );
}
.surface-page:hover {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-light-l: 0.95;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_local-dark-l: 0.15;
  --_mode-mix: calc((1 - var(--tau)) / 2);
  --alpha-hue: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-beta: calc(0 + (0 - 0) * var(--_mode-mix));
  --surface-token: oklch(
    calc(0.95 + (0.15 - 0.95) * var(--_mode-mix))
    var(--alpha-beta)
    var(--alpha-hue)
  );
}

.surface-card {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-light-l: 1;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_local-dark-l: 0.2;
  --_mode-mix: calc((1 - var(--tau)) / 2);
  --alpha-hue: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-beta: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-structure: 1px solid CanvasText;
  --surface-token: oklch(
    calc(1 + (0.2 - 1) * var(--_mode-mix))
    var(--alpha-beta)
    var(--alpha-hue)
  );
  --text-high-token: oklch(
    calc(0 + (1 - 0) * var(--_mode-mix))
    0
    0
  );
  --text-body-token: oklch(
    calc(0.3619 + (0.9446 - 0.3619) * var(--_mode-mix))
    0
    0
  );
  --text-subtle-token: oklch(
    calc(0.4586 + (0.896 - 0.4586) * var(--_mode-mix))
    0
    0
  );
  --text-subtlest-token: oklch(
    calc(0.54 + (0.8468 - 0.54) * var(--_mode-mix))
    0
    0
  );
  --text-high-hc-token: oklch(
    calc(0 + (1 - 0) * var(--_mode-mix))
    0
    0
  );
  --text-body-hc-token: oklch(
    calc(0.1935 + (0.9926 - 0.1935) * var(--_mode-mix))
    0
    0
  );
  --text-subtle-hc-token: oklch(
    calc(0.3619 + (0.9446 - 0.3619) * var(--_mode-mix))
    0
    0
  );
  --text-subtlest-hc-token: oklch(
    calc(0.411 + (0.9204 - 0.411) * var(--_mode-mix))
    0
    0
  );
  --border-dec-token: oklch(
    calc(0.1935 + (0.9926 - 0.1935) * var(--_mode-mix))
    0
    0
    /
    calc(0.0612 + (0.214 - 0.0612) * var(--_mode-mix))
  );
  --border-int-token: oklch(
    calc(0.1935 + (0.9926 - 0.1935) * var(--_mode-mix))
    0
    0
    /
    calc(0.0612 + (0.214 - 0.0612) * var(--_mode-mix))
  );
}

/* Core Utilities (Reactive Pipeline) */
.text-high { --_text-lightness-source: var(--text-high-token); }
.text-strong { --_text-lightness-source: var(--text-high-token); font-weight: 600; }
.text-body { --_text-lightness-source: var(--text-body-token); }
.text-subtle { --_text-lightness-source: var(--text-subtle-token); }
.text-subtlest { --_text-lightness-source: var(--text-subtlest-token); }
.text-content { --_text-lightness-source: var(--text-body-token); }
.bg-surface { background-color: var(--_computed-surface); }
.bg-strong { background-color: var(--_computed-fg-color); }
.text-inverse { color: var(--_computed-surface); }

.hue-slider {}

@media (prefers-contrast: more) {
  .text-high { --_text-lightness-source: var(--text-high-hc-token); }
  .text-strong { --_text-lightness-source: var(--text-high-hc-token); }
  .text-body { --_text-lightness-source: var(--text-body-hc-token); }
  .text-subtle { --_text-lightness-source: var(--text-subtle-hc-token); }
  .text-subtlest { --_text-lightness-source: var(--text-subtlest-hc-token); }
  .text-content { --_text-lightness-source: var(--text-body-hc-token); }
}

:root {
  --preset-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --preset-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  --preset-weight-medium: 500;
  --preset-weight-bold: 600;
  --preset-text-xs: 0.75rem;
  --preset-text-sm: 0.875rem;
  --preset-text-base: 1rem;
  --preset-text-lg: 1.125rem;
  --preset-text-xl: 1.25rem;
  --preset-text-2xl: 1.5rem;
  --preset-border-width: 1px;
  --preset-border-style: solid;
}

/* Preset Utilities (Typography & Layout) */
.font-mono { font-family: var(--preset-font-mono); }
.font-sans { font-family: var(--preset-font-sans); }
.font-medium { font-weight: var(--preset-weight-medium); }
.font-bold { font-weight: var(--preset-weight-bold); }
.text-xs { font-size: var(--preset-text-xs); }
.text-sm { font-size: var(--preset-text-sm); }
.text-base { font-size: var(--preset-text-base); }
.text-lg { font-size: var(--preset-text-lg); }
.text-xl { font-size: var(--preset-text-xl); }
.text-2xl { font-size: var(--preset-text-2xl); }
.preset-bordered { border: var(--preset-border-width) var(--preset-border-style) var(--border-dec-token); }
.bordered { border: 1px solid var(--border-dec-token); }"
`;

exports[`generateTokensCss > generates palette tokens when configured 1`] = `
"
:root {
  /* Elevation */
  --shadow-sm: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.1 + (-0.05 * var(--tau, 1))));
  --shadow-md: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  --shadow-lg: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  --shadow-xl: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  /* Focus */
  --focus-ring-color: oklch(calc(0.6 + (-0.15 * var(--tau, 1))) 0.2 250 / 1);
  /* Highlight */
  --highlight-ring-color: oklch(calc(0.6 + (-0.15 * var(--tau, 1))) 0.2 300 / 1);
  --highlight-surface-color: oklch(calc(0.575 + (0.375 * var(--tau, 1))) 0.05 300 / 1);
}

* {
  /* Data Visualization (Reactive) */
  --axm-chart-1-h: 0;
  --axm-chart-1-c: 0.15;
  --axm-chart-1: oklch(
    calc(0.55 - (0.05 * var(--tau)))
    calc(var(--axm-chart-1-c) + (var(--alpha-beta) * 0.5))
    var(--axm-chart-1-h)
  );
  --axm-chart-2-h: 120;
  --axm-chart-2-c: 0.15;
  --axm-chart-2: oklch(
    calc(0.55 - (0.05 * var(--tau)))
    calc(var(--axm-chart-2-c) + (var(--alpha-beta) * 0.5))
    var(--axm-chart-2-h)
  );
  --axm-chart-3-h: 240;
  --axm-chart-3-c: 0.15;
  --axm-chart-3: oklch(
    calc(0.55 - (0.05 * var(--tau)))
    calc(var(--axm-chart-3-c) + (var(--alpha-beta) * 0.5))
    var(--axm-chart-3-h)
  );
}

/* Core Utilities (Reactive Pipeline) */
.text-high { --_text-lightness-source: var(--text-high-token); }
.text-strong { --_text-lightness-source: var(--text-high-token); font-weight: 600; }
.text-body { --_text-lightness-source: var(--text-body-token); }
.text-subtle { --_text-lightness-source: var(--text-subtle-token); }
.text-subtlest { --_text-lightness-source: var(--text-subtlest-token); }
.text-content { --_text-lightness-source: var(--text-body-token); }
.bg-surface { background-color: var(--_computed-surface); }
.bg-strong { background-color: var(--_computed-fg-color); }
.text-inverse { color: var(--_computed-surface); }

.hue-slider {}

@media (prefers-contrast: more) {
  .text-high { --_text-lightness-source: var(--text-high-hc-token); }
  .text-strong { --_text-lightness-source: var(--text-high-hc-token); }
  .text-body { --_text-lightness-source: var(--text-body-hc-token); }
  .text-subtle { --_text-lightness-source: var(--text-subtle-hc-token); }
  .text-subtlest { --_text-lightness-source: var(--text-subtlest-hc-token); }
  .text-content { --_text-lightness-source: var(--text-body-hc-token); }
}

:root {
  --preset-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --preset-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  --preset-weight-medium: 500;
  --preset-weight-bold: 600;
  --preset-text-xs: 0.75rem;
  --preset-text-sm: 0.875rem;
  --preset-text-base: 1rem;
  --preset-text-lg: 1.125rem;
  --preset-text-xl: 1.25rem;
  --preset-text-2xl: 1.5rem;
  --preset-border-width: 1px;
  --preset-border-style: solid;
}

/* Preset Utilities (Typography & Layout) */
.font-mono { font-family: var(--preset-font-mono); }
.font-sans { font-family: var(--preset-font-sans); }
.font-medium { font-weight: var(--preset-weight-medium); }
.font-bold { font-weight: var(--preset-weight-bold); }
.text-xs { font-size: var(--preset-text-xs); }
.text-sm { font-size: var(--preset-text-sm); }
.text-base { font-size: var(--preset-text-base); }
.text-lg { font-size: var(--preset-text-lg); }
.text-xl { font-size: var(--preset-text-xl); }
.text-2xl { font-size: var(--preset-text-2xl); }
.preset-bordered { border: var(--preset-border-width) var(--preset-border-style) var(--border-dec-token); }
.bordered { border: 1px solid var(--border-dec-token); }"
`;

exports[`generateTokensCss > handles missing background values gracefully 1`] = `
"
:root {
  /* Elevation */
  --shadow-sm: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.1 + (-0.05 * var(--tau, 1))));
  --shadow-md: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  --shadow-lg: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  --shadow-xl: oklch(calc(0.5 + (-0.5 * var(--tau, 1))) 0 0 / calc(0.125 + (-0.025 * var(--tau, 1))));
  /* Focus */
  --focus-ring-color: oklch(calc(0.6 + (-0.15 * var(--tau, 1))) 0.2 250 / 1);
  /* Highlight */
  --highlight-ring-color: oklch(calc(0.6 + (-0.15 * var(--tau, 1))) 0.2 300 / 1);
  --highlight-surface-color: oklch(calc(0.575 + (0.375 * var(--tau, 1))) 0.05 300 / 1);
}

.surface-unknown {
  --_local-light-h: 0;
  --_local-light-c: 0;
  --_local-light-l: 0;
  --_local-dark-h: 0;
  --_local-dark-c: 0;
  --_local-dark-l: 0;
  --_mode-mix: calc((1 - var(--tau)) / 2);
  --alpha-hue: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-beta: calc(0 + (0 - 0) * var(--_mode-mix));
  --alpha-structure: 1px solid CanvasText;
  --surface-token: oklch(
    calc(0 + (0 - 0) * var(--_mode-mix))
    var(--alpha-beta)
    var(--alpha-hue)
  );
  --text-high-token: oklch(
    calc(1 + (1 - 1) * var(--_mode-mix))
    0
    0
  );
  --text-body-token: oklch(
    calc(0.9416 + (0.9416 - 0.9416) * var(--_mode-mix))
    0
    0
  );
  --text-subtle-token: oklch(
    calc(0.893 + (0.893 - 0.893) * var(--_mode-mix))
    0
    0
  );
  --text-subtlest-token: oklch(
    calc(0.8406 + (0.8406 - 0.8406) * var(--_mode-mix))
    0
    0
  );
  --text-high-hc-token: oklch(
    calc(1 + (1 - 1) * var(--_mode-mix))
    0
    0
  );
  --text-body-hc-token: oklch(
    calc(0.9866 + (0.9866 - 0.9866) * var(--_mode-mix))
    0
    0
  );
  --text-subtle-hc-token: oklch(
    calc(0.9416 + (0.9416 - 0.9416) * var(--_mode-mix))
    0
    0
  );
  --text-subtlest-hc-token: oklch(
    calc(0.9174 + (0.9174 - 0.9174) * var(--_mode-mix))
    0
    0
  );
}

/* Core Utilities (Reactive Pipeline) */
.text-high { --_text-lightness-source: var(--text-high-token); }
.text-strong { --_text-lightness-source: var(--text-high-token); font-weight: 600; }
.text-body { --_text-lightness-source: var(--text-body-token); }
.text-subtle { --_text-lightness-source: var(--text-subtle-token); }
.text-subtlest { --_text-lightness-source: var(--text-subtlest-token); }
.text-content { --_text-lightness-source: var(--text-body-token); }
.bg-surface { background-color: var(--_computed-surface); }
.bg-strong { background-color: var(--_computed-fg-color); }
.text-inverse { color: var(--_computed-surface); }

.hue-slider {}

@media (prefers-contrast: more) {
  .text-high { --_text-lightness-source: var(--text-high-hc-token); }
  .text-strong { --_text-lightness-source: var(--text-high-hc-token); }
  .text-body { --_text-lightness-source: var(--text-body-hc-token); }
  .text-subtle { --_text-lightness-source: var(--text-subtle-hc-token); }
  .text-subtlest { --_text-lightness-source: var(--text-subtlest-hc-token); }
  .text-content { --_text-lightness-source: var(--text-body-hc-token); }
}

:root {
  --preset-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --preset-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
  --preset-weight-medium: 500;
  --preset-weight-bold: 600;
  --preset-text-xs: 0.75rem;
  --preset-text-sm: 0.875rem;
  --preset-text-base: 1rem;
  --preset-text-lg: 1.125rem;
  --preset-text-xl: 1.25rem;
  --preset-text-2xl: 1.5rem;
  --preset-border-width: 1px;
  --preset-border-style: solid;
}

/* Preset Utilities (Typography & Layout) */
.font-mono { font-family: var(--preset-font-mono); }
.font-sans { font-family: var(--preset-font-sans); }
.font-medium { font-weight: var(--preset-weight-medium); }
.font-bold { font-weight: var(--preset-weight-bold); }
.text-xs { font-size: var(--preset-text-xs); }
.text-sm { font-size: var(--preset-text-sm); }
.text-base { font-size: var(--preset-text-base); }
.text-lg { font-size: var(--preset-text-lg); }
.text-xl { font-size: var(--preset-text-xl); }
.text-2xl { font-size: var(--preset-text-2xl); }
.preset-bordered { border: var(--preset-border-width) var(--preset-border-style) var(--border-dec-token); }
.bordered { border: 1px solid var(--border-dec-token); }"
`;
